Regression: Vector Math Node Operations Menu Always Single Column #115275

Closed
opened 2023-11-22 17:03:13 +01:00 by Iliya Katushenock · 7 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 527.56

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-18 21:46, hash: 9eba3902c904
Worked: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-07 10:35, hash: 9ecd1063070f

Short description of error
Geometry Nodes "Vector Math" node Operation menu used to be two columns of items. Since #105386 it is always a single column, even when there is acres of space.

Before After
image image

Exact steps for others to reproduce the error

  1. Open attached example .blend file.
  2. Zoom out.
  3. Open vector math operation selector.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 527.56 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-18 21:46, hash: `9eba3902c904` Worked: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-07 10:35, hash: `9ecd1063070f` **Short description of error** Geometry Nodes "Vector Math" node Operation menu used to be two columns of items. Since #105386 it is always a single column, even when there is acres of space. | Before | After | | -- | -- | | ![image](/attachments/00d6b527-1d2f-4b3f-9e25-308c523aa1fa) | ![image](/attachments/e936d883-4b76-41b8-b6fc-e9b56527dd6d) | **Exact steps for others to reproduce the error** 1. Open attached example .blend file. 2. Zoom out. 3. Open vector math operation selector.
Author
Member
@Harley /
Iliya Katushenock changed title from Regression: Geometry Nodes: Multi column enum selector menu is flat to Regression: Nodes: Multi column enum selector menu is flat 2023-11-22 17:11:01 +01:00
Member

Yes, this is by design.

At high zoom levels it was possible for a wide enum list to not fit within available space:

image

Now wide enum lists estimate their needed width and it approaches the limit of the window width will switch to a single column so that it remains usable.

Yes, this is by design. At high zoom levels it was possible for a wide enum list to not fit within available space: ![image](/attachments/1c3a830e-e613-4eb3-a06c-123205894640) Now wide enum lists estimate their needed width and it approaches the limit of the window width will switch to a single column so that it remains usable.
Author
Member

I really not sure if such long list is good feature. Regular math node seems okay, without such regression.

I really not sure if such long list is good feature. Regular math node seems okay, without such regression.
Member

I really not sure if such long list is good feature. Regular math node seems okay, without such regression.

Regular math node will do the same thing if you zoom in enough, make the scale larger, and/or make the window smaller.

Could you explain a bit better why this is bad and a regression? It currently just states that it "is flat" which doesn't describe a problem.

The base problem, and source of many bug reports, is described well here: #72093

So #105386 solves this by collapsing wide enum menus to a single column when there is a risk of lack of space. If the menu is too wide to fit the window the items outside of view are inaccessible, rendering the menu unusable. Although a long single-column menu is a pain, it does allow selection of all items when in a space constrained situation like this.

> I really not sure if such long list is good feature. Regular math node seems okay, without such regression. Regular math node will do the same thing if you zoom in enough, make the scale larger, and/or make the window smaller. Could you explain a bit better why this is bad and a regression? It currently just states that it "is flat" which doesn't describe a problem. The base problem, and source of many bug reports, is described well here: https://projects.blender.org/blender/blender/issues/72093 So #105386 solves this by collapsing wide enum menus to a single column when there is a risk of lack of space. If the menu is too wide to fit the window the items outside of view are inaccessible, rendering the menu unusable. Although a long single-column menu is a pain, it does allow selection of all items when in a space constrained situation like this.
Author
Member

This is regression due to change in functionality (what I saw as a bug).
I am not one of the UI module why can't rise priority due to my opinions, so you could lower this (in case that is expected).
The following is my opinion: This is a very long list that makes no sense if the menu can always just be a multi-column. I literally felt pain because my muscle memory wasn't working and I had to go through a very long list.

This is regression due to change in functionality (what I saw as a bug). I am not one of the UI module why can't rise priority due to my opinions, so you could lower this (in case that is expected). The following is my opinion: This is a very long list that makes no sense if the menu can always just be a multi-column. I literally felt pain because my muscle memory wasn't working and I had to go through a very long list.
Author
Member

Just change report to correct reproduce steps.

Just change report to correct reproduce steps.
Harley Acheson changed title from Regression: Nodes: Multi column enum selector menu is flat to Regression: Vector Math Node Operations Menu Always Single Column 2023-11-22 19:34:52 +01:00
Harley Acheson self-assigned this 2023-11-22 19:38:34 +01:00
Member

Okay, I see this is (probably) only the Vector Math node and have updated the title and the description.

With the old code this menu was not explicitly two columns, but was instead overflowing into a second column. It is without any "Categories" and is a single list of 27 items that overflows a hard-coded limit of 20 to make two columns.

This might need a bit of thought. The current code does not use any hard-coded vertical maximums so that very long and wide menus can use more vertical space if needed.

Okay, I see this is (probably) only the Vector Math node and have updated the title and the description. With the old code this menu was not explicitly two columns, but was instead **overflowing** into a second column. It is without any "Categories" and is a single list of 27 items that overflows a hard-coded limit of 20 to make two columns. This might need a bit of thought. The current code does not use any hard-coded vertical maximums so that very long and wide menus can use more vertical space if needed.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-22 21:15:13 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115275
No description provided.