Fix #115275: Allow Wrapping of Single Column Enum Menus

Enum menus that do not have categories should be able to wrap to
multiple columns is there is enough horizontal space.

Pull Request: https://projects.blender.org/blender/blender/pulls/115283